--- a/ConfirmationService.Host/appsettings.json
+++ b/ConfirmationService.Host/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailConnect": {
+    "Login": "zabulonov444@yandex.ru",
+    "Password": "asbhltihcwllxcfz",
+    "Server": "smtp.yandex.ru",
+    "Port": "465"
+  },
   "AllowedHosts": "*"
 }
