add db connection + models

--- a/ConfirmationService.Host/appsettings.json
+++ b/ConfirmationService.Host/appsettings.json
@@ -11,5 +11,8 @@
     "Server": "smtp.yandex.ru",
     "Port": "465"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConfirmationServiceDb" : "Server=localhost; Database=postgres; Port=5432; User Id=postgres; Password=1234"
+  }
 }
