--- a/ConfirmationService.BusinessLogic/ConfirmationService.BusinessLogic.csproj
+++ b/ConfirmationService.BusinessLogic/ConfirmationService.BusinessLogic.csproj
@@ -8,10 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="MailKit" Version="4.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ConfirmationService.Infrastructure\ConfirmationService.Infrastructure.csproj" />
     </ItemGroup>
+
 
 </Project>
