--- a/ConfirmationService.Host/ConfirmationService.Host.csproj
+++ b/ConfirmationService.Host/ConfirmationService.Host.csproj
@@ -8,7 +8,12 @@
 
     <ItemGroup>
         <PackageReference Include="MailKit" Version="4.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
