--- a/ConfirmationService.Infrastructure/ConfirmationService.Infrastructure.csproj
+++ b/ConfirmationService.Infrastructure/ConfirmationService.Infrastructure.csproj
@@ -7,6 +7,17 @@
 
     <ItemGroup>
         <PackageReference Include="MailKit" Version="4.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
     </ItemGroup>
+
+
+
+
+
+
 
 </Project>
