--- a/ConfirmationService.Infrastructure/ConfirmationService.Infrastructure.csproj
+++ b/ConfirmationService.Infrastructure/ConfirmationService.Infrastructure.csproj
@@ -6,12 +6,18 @@
 
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
         <PackageReference Include="MailKit" Version="4.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\ConfirmationService.Core\ConfirmationService.Core.csproj" />
     </ItemGroup>
 
 
