--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
 version: '3.4'
-
 services:
-  webapp:
-    image: test:latest
+  webapi:
+    image: confirmation_service:latest
     depends_on:
       - "postgres"
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80
-      - 443
+      - "9901:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
@@ -18,8 +16,9 @@ services:
       - ~/.aspnet/https:/https:ro
     links:
       - "postgres"
+      
   postgres:
-    image: postgres:13.3
+    image: postgres:latest
     environment:
       POSTGRES_DB: "ConfirmDb"
       POSTGRES_USER: "postgres"
