--- a/ConfirmationService.Host/ConfirmationService.Host.csproj
+++ b/ConfirmationService.Host/ConfirmationService.Host.csproj
@@ -4,8 +4,9 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <TargetFramework>net8.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="MailKit" Version="4.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
