--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: '3.4'
 services:
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: "ConfirmDb"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "1234"
+    ports:
+      - "5432:5432"
+
   webapi:
     image: confirmation_service:latest
-    depends_on:
-      - "postgres"
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,14 +21,5 @@ services:
       - ASPNETCORE_URLS=http://+:80
     volumes:
       - ~/.aspnet/https:/https:ro
-    links:
-      - "postgres"
-      
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: "ConfirmDb"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "1234"
-    ports:
-      - "5432:5432"
+    depends_on:
+      - postgres
