--- a/ConfirmationService.Host/appsettings.json
+++ b/ConfirmationService.Host/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConfirmationServiceDb" : "Server=local; Database=ConfirmDb; Port=5432; User Id=postgres; Password=1234"
+    "ConfirmationServiceDb" : "Server=localhost; Database=ConfirmDb; Port=5432; User Id=postgres; Password=1234"
   }
 }
