--- a/ConfirmationService.AspireHost/ConfirmationService.AspireHost.csproj
+++ b/ConfirmationService.AspireHost/ConfirmationService.AspireHost.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsAspireHost>true</IsAspireHost>
+        <RootNamespace>AspireHost</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
