FIX docker compose db migration bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
 
   webapi:
     image: confirmation_service:latest
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
+    build:
+       context: .
+       dockerfile: Dockerfile
     ports:
       - "9901:80"
     environment:
