--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+#OS files
+.DS_Store
+.DS_Store?
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
